--- a/doprax.yaml
+++ b/doprax.yaml
@@ -1,7 +1,7 @@
 # Infrastructure as code in for doprax.com
 volumes:
-  - name:  local_disk
-    mount: /data/local_disk/
+  - name:  app_data
+    mount: /app/data/
 
 envs:
     - WORDPRESS_DB_HOST: mysql
@@ -10,8 +10,8 @@ envs:
     - WORDPRESS_DB_PASSWORD: random_1
       type: password
 services:
-  - mysql:
-      tag: 5.7
+  - ubuntu:
+      tag: latest
       volumes:
         - name: mysql_vol
           mount: /var/lib/mysql/
